--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ $(function(){
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="faq_support.html">
-                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ & Support</span>
+                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ and Support</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -212,45 +212,45 @@ $(function(){
               <div class="page-container">
 
                 <div class="flex flex-row" id="content_title">
-  Bazaarvoice iOS SDK
+  Bazaarvoice Mobile SDK for iOS
 </div>
-<p>Welcome to Bazaarvoice! Get familiar with the Bazaarvoice products and tools using the tutorials and references below.</p>
+<p>Welcome to Bazaarvoice. Use the guides and references on this site to install, integrate, and effectively use the Bazaarvoice Mobile SDK for iOS with Bazaarvoice products such as Conversations, Curations, and Shopper Advertising.</p>
 <hr>
 <br>
 
-<h3>Get Started</h3>
-<p>The guides below show you how to install, integrate, and effectively use Bazaarvoice products in your iOS apps.</p>
+<h3>Getting Started</h3>
 <br>
 
 <div class="flex flex-row">
   <div class="flex cel-fl-3 right-border">
     <a class="index-banner" href="product_recommendations.html">
         <h5 class="h5link">Product Recommendations <i class="fa fa-chevron-right"></i></h5>
-        <p class="gray">Product recommendations based on user's browsing history.</p>
+        <p class="gray">Product recommendations based on user's browsing history</p>
       </a>
   </div>
 
   <div class="flex cel-fl-3 right-border" style="padding-left: 10px">
     <a class="index-banner" href="curations_display.html">
       <h5 class="h5link">Curations <i class="fa fa-chevron-right"></i></h5>
-      <p class="gray">Curated social posts made easy.</p>
+      <p class="gray">Curated social posts made easy</p>
     </a>
   </div>
   <div class="flex cel-fl-3 right-border" style="padding-left: 10px">
     <a class="index-banner" href="advertising.html">
       <h5 class="h5link">Advertising <i class="fa fa-chevron-right"></i></h5>
-      <p class="gray">Targeted advertising across all platforms.</p>
+      <p class="gray">Targeted advertising across all platforms</p>
     </a>
   </div>
   <div class="flex cel-fl-3" style="padding-left: 10px">
     <a class="index-banner" href="using_conversations.html">
       <h5 class="h5link">Conversations <i class="fa fa-chevron-right"></i></h5>
-      <p class="gray">Bazaarvoice is the Consumer Generated Content expert.</p>
+      <p class="gray">Consumer-generated content and analytics</p>
     </a>
   </div>
 
 </div>
 <hr>
+
 
               </div>
             </div>
