--- a/advertising.html
+++ b/advertising.html
@@ -185,7 +185,7 @@ $(function(){
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="faq_support.html">
-                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ & Support</span>
+                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ and Support</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -215,34 +215,35 @@ $(function(){
 	Targeted Advertising
 </div>
 
-<p>Targeted advertising is powered by Bazaarvoice's powerful shopper segment data and delivers highly targeted advertisements to your users.</p>
-<p>The BVAdvertising module is architected so that you can implement the DFP (Doubleclick For Publishers) SDK, and pair it with Bazaarvoice's shopper segment functionality easily.</p>
+<p>The Advertising module of the Bazaarvoice Mobile SDKs is powered by Bazaarvoice's powerful shopper segment data and delivers highly targeted ads to your users. You must have Shopper Advertising enabled to use the Advertising module.</p>
+<p>Bazaarvoice creates custom ad markup using <a href="https://developers.google.com/doubleclick-publishers/docs/rel_notes">DoubleClick for Publishers (DFP)</a> based on your specifications. You can use the Bazaarvoice Mobile SDKs to easily pair the DFP SDK with the Advertising module. Contact Bazaarvoice to set up targeted ads in DFP.</p>
 
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Contact Bazaarvoice about setting up targeted ads in DFP, and to get your <strong>apiKeyShopperAdvertising</strong> (required below) and DFP <strong>adUnitId</strong>'s.</p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Important: You will need your <code>apiKeyShopperAdvertising</code> and DFP <code>adUnitId</code>s to implement and use the Advertising module.</p>
 
 <hr>
 <br>
 
-<p class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Before you begin implementation of ths module make sure you have verified your installed as details in the <a href="./installation.html">Installation and Configuration page.</a></p>
+<p class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.</p>
+
 
 
 <h3>Set User Information</h3>
 <p>
-	Once a user is authenticated inside your user login workflow, set user information inside the <code>BVSDKManager#sharedManager()</code> object.
+	After a user is authenticated inside your user login workflow, set user information inside the <code>BVSDKManager#sharedManager()</code> object.
 </p>
 
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Note: the userAuthString created with your existing Bazaarvoice implementation logic needs to be given to the <strong>BVSDKManager</strong> object. However, the steps to encrypt your userAuthString are still applicable even if you are not a Conversations client.</p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Note: You must give the userAuthString created with your existing Bazaarvoice implementation logic to the <strong>BVSDKManager</strong> object. However, the steps to encrypt your userAuthString are applicable even if you are not a Conversations client.</p>
 
-<h5>Example Authentication String - for testing purposes</h5>
+<h5>Example Authentication String for Testing</h5>
 <p>
-	If you don't have an authorization token set up yet, please refer to the example in <a href="./user_authentication_token.html">User Authentication Token</a>.
+	If you haven't yet set up an authorization token, use the <a href="./user_authentication_token.html">User Authentication Token</a> example.
 </p>
 
 
 <br>
-<h3>Implementation</h3>
-<p>Users of this SDK are asked to implement ads using <a href="https://developers.google.com/mobile-ads-sdk/docs/dfp/ios/quick-start">DFP's SDK for iOS</a>. Contact Bazaarvoice about serving ads in your app to get everything properly set up in DFP. Once ads are implemented, continue on below:</p>
-<p>Adding targeting data to your advertisements is simple. For every <code>DFPRequest</code> that you use, set the <code>customTargeting</code> property as follows:</p>
+<h3>Implementing Ads</h3>
+<p>Bazaarvoice recommends you implement advertisements using <a href="https://developers.google.com/mobile-ads-sdk/docs/dfp/ios/quick-start">DFP's SDK for iOS</a>. Contact Bazaarvoice for assistance. After ads are implemented, use the following instructions to add targeting data.</p>
+<p>For every <code>DFPRequest</code> you use, set the <code>customTargeting</code> property with the following code:</p>
 
 
 <ul class="nav nav-tabs" role="tablist">
@@ -268,14 +269,13 @@ request.customTargeting = [[BVSDKManager sharedManager] getCustomTargeting];
 	</div>
 
 </div>
-<p style="padding-top:6px;">This sends along necessary information to DFP to properly target ads for that user.</p>
+<p style="padding-top:6px;">The above code sends DFP the information necessary to target ads correctly.</p>
 <br>
 <br>
 
-<a name="Upgrading" style="color:#444; text-decoration: none;"><h3>Upgrading from old versions of BVSDK</h3></a>
-<p>Previously, DFP's SDK was included with the BVSDK, and users were asked to use special subclasses, like using <code>BVTargetedRequest</code> instead of <code>DFPRequest</code>. However, we've simplified this process greatly.</p>
-<p>Now, users of Bazaarvoice Advertising are asked to implement DFP ads on their own, following their <a href="https://developers.google.com/mobile-ads-sdk/docs/dfp/ios/quick-start">excellent documentation</a>. After ads are implemented and working well, adding in targeting information is a one-line change, described above.</p>
-<p>Specifically, once you upgrade your BVSDK installation:</p>
+<a name="Upgrading" style="color:#444; text-decoration: none;"><h3>Upgrading from Older Versions of Bazaarvoice Mobile SDKs</h3></a>
+<p>In previous versions, the Mobile SDKs included the DFP SDK, and you needed to use subclasses like <code>BVTargetedRequest</code> instead of <code>DFPRequest</code>. However, Bazaarvoice has simplified this process greatly with the latest Mobile SDKs. If you want to use the Advertising module of the most up-to-date Mobile SDKs, you must implement DFP ads yourself. Google provides <a href="https://developers.google.com/mobile-ads-sdk/docs/dfp/ios/quick-start">excellent documentation</a> to guide you through the process. After ads are implemented and working well, use the code in the "Implementing Ads" section to add targeting information.</p>
+<p>Complete the following steps to finish upgrading your Mobile SDK:</p>
 <ul>
 	<li>Change <code>BVTargetedAdLoader</code> to <code>GADAdLoader</code></li>
 	<li>Change <code>BVTargetedRequest</code> to <code>DFPRequest</code></li>
@@ -285,37 +285,37 @@ request.customTargeting = [[BVSDKManager sharedManager] getCustomTargeting];
 <br>
 <br>
 
-<h3>Contextual Interests</h3>
-<p>BVAdvertising is structured around categories that products belong to. The list is fully defined in <code>BVContextualInterests.h</code>. It is split into two tiers, with about 30 <i>tier one</i> categories, all with multiple sub-categories (<i>tier two</i>).</p>
-<p>For example, the Women's dresses section of a Target store would correspond to:</p>
+<h3>Determining Contextual Interests</h3>
+<p>The Advertising module is structured around categories. You can find a complete list in <code>BVContextualInterests.h</code>. The list is split into two tiers, with about 30 Tier One categories, each of which includes multiple Tier Two subcategories.</p>
+<p>For example, the Women's dresses section of a department store would correspond to the following product categories:</p>
 <ul>
-	<li>tier one: <code>tierOneApparelAndAccessories</code></li>
-	<li>tier two: <code>tierTwoApparelAndAccessoriesWomensDresses</code></li>
+	<li>Tier One: <code>tierOneApparelAndAccessories</code></li>
+	<li>Tier Two: <code>tierTwoApparelAndAccessoriesWomensDresses</code></li>
 </ul>
-<p>Similarly, the Television section of a BestBuy store would correspond to:</p>
+<p>Similarly, the Television section of an electronics store would correspond to the following product categories:</p>
 <ul>
-	<li>tier one: <code>tierOneConsumerElectronics</code></li>
-	<li>tier two: <code>tierTwoConsumerElectronicsTelevisions</code></li>
+	<li>Tier One: <code>tierOneConsumerElectronics</code></li>
+	<li>Tier Two: <code>tierTwoConsumerElectronicsTelevisions</code></li>
 </ul>
-<p>Note: all tier two categories are extensions of their tier one category names. Contextual Interest categories are used while sending location information to BVAdvertising, as defined below.</p>
+<p>All Tier Two categories are extensions of their Tier One category names.<p></p>Contextual interest categories are used while sending location information to the Advertising module, as defined in the following section.</p>
 <br>
 <br>
 
-<h3>BVAdvertising + User Location</h3>
-<p>BVAdvertising provides many ways to integrate location data into a shopper's profile. All location related methods can be found in <code>BVLocationEventsHelper.h</code>, but a couple notes:</p>
+<h3>Notes on Advertising and User Location</h3>
+<p>The Advertising module provides many ways to integrate location data into a shopper's profile. AYou can find all location-related methods in <code>BVLocationEventsHelper.h</code>. Bear in mind the following information:</p>
 <ul>
-	<li>All location methods have <code>contextualTier1</code> and <code>contextualTier2</code> parameters. This allows you to send all location->interest mapping information available to BVAdvertising in order to give the shopper the best profile possible. See <code>BVContextualInterests.h</code> for a generated list of Contextual Tier 1 and Tier 2 strings.</li>
-	<li>We define methods that correlate strongly to <code>CLLocationManagerDelegate</code> methods -- and provide an example usage of CLLocationManager+BVAdvertising inside the <code>LocationExample.m</code> file.</li>
-	<li>We also define methods that correlate strongly to Gimbal Beacon delegate methods, specifically <code>GMBLPlaceManagerDelegate</code> and <code>GMBLBeaconManagerDelegate</code>. Similarly, we provide an example usage of Gimbal+BVAdvertising in the <code>GimbalExample.m</code> file.</li>
+	<li>All location methods have <code>contextualTier1</code> and <code>contextualTier2</code> parameters. This allows you to send all location->interest mapping information available to the Advertising module to give the shopper the best profile possible. Refer to <code>BVContextualInterests.h</code> for a generated list of Contextual Tier 1 and Tier 2 strings.</li>
+	<li>Bazaarvoice defines methods that correlate strongly to <code>CLLocationManagerDelegate</code> methods. You can find example usage of CLLocationManager+BVAdvertising inside the <code>LocationExample.m</code> file.</li>
+	<li>Bazaarvoice also defines methods that correlate strongly to Gimbal Beacon delegate methods, specifically <code>GMBLPlaceManagerDelegate</code> and <code>GMBLBeaconManagerDelegate</code>. You can find example usage of Gimbal+BVAdvertising in the <code>GimbalExample.m</code> file.</li>
 </ul>
 <br>
 
 
 <div class="well well-sm">
 	<h5>Author</h5>
-	<p>Copyright 2016 Bazaarvoice, Inc. All right reserved.</p>
+	<p>Copyright 2016 Bazaarvoice, Inc. All rights reserved.</p>
 	<h5>License</h5>
-	<p>Use of this SDK is contingent on your agreement and conformance with <a href="http://www.bazaarvoice.com/legal/api-terms-of-use.html">Bazaarvoice's API Terms of Use</a>. Additionally, you agree to store all data acquired by this SDK or Bazaarvoice’s API only within the storage of the individual application instance using the SDK or API. You also agree to use the data acquired by the SDK or API only within the context of the same individual application instance and only for purposes consistent with that application’s purpose. Except as otherwise noted, the Bazaarvoice iOS SDK licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>.</p>
+	<p>Use of the Bazaarvoice Mobile SDKs is contingent on your agreement and conformance with <a href="http://www.bazaarvoice.com/legal/api-terms-of-use.html">Bazaarvoice's API Terms of Use</a>. Additionally, you agree to store all data acquired by the SDK or Bazaarvoice's API only within the storage of the individual application instance using the SDK or API. You also agree to use the data acquired by the SDK or API only within the context of the same individual application instance and only for purposes consistent with that application's purpose. Except as otherwise noted, the Bazaarvoice iOS SDK is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>.</p>
 </div>
 <br>
 
