--- a/bv_pixel.html
+++ b/bv_pixel.html
@@ -185,7 +185,7 @@ $(function(){
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="faq_support.html">
-                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ & Support</span>
+                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ and Support</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -216,18 +216,17 @@ $(function(){
 </div>
 <hr>
 
-<h3>What is it?</h3>
-<p>The BV Pixel tells Bazaarvoice when a customer converts in your iOS app. There are two types of BV Pixel tags:</p>
+<p>The BV Pixel (formerly known as the ROI beacon) tells Bazaarvoice when a customer converts in your iOS app. There are two types of BV Pixel tags:</p>
 <ul>
-	<li>Generic (non-commerce) conversion tags capture events such as newsletter signups, product registration, downloads of a PDF, and requests for more information about a product or service. You can generate ROI reports related to key performance indicators.</li>
-	<li>Transaction conversion tags capture purchase data -- when a customer buys a product. The data captured might include SKUs, email addresses, and postal addresses. You can generate ROI reports tied to revenue. After you install the BV Pixel, you can use this measurement dashboard to generate reports that show how users are interacting in your iOS app, and to understand the value of your implementation.</li>
+	<li>Generic (non-commerce) conversion tags capture events such as newsletter signups, product registration, downloads of a PDF, and requests for more information about a product or service. You can generate ROI (return on investment) reports related to key performance indicators.</li>
+	<li>Transaction conversion tags capture purchase data&#8212;when a customer buys a product. The data captured might include SKUs, email addresses, and postal addresses. You can generate ROI reports tied to revenue.</li>
 </ul>
 
 <br>
-<h3>Why is it important?</h3>
-<p>After you implement the BV Pixel in your iOS app, you can enable other useful features besides reporting. The maintenance-free post-interaction email feature is key to increasing the volume of your user-generated content. In addition, with the BV Pixel you can run A/B tests to evaluate best practices in your iOS app, live, before you implement them for all customers. You must install the BV Pixel before you can use these indispensable features.</p>
+<p>After you implement the BV Pixel in your iOS app, you can use this measurement dashboard to generate reports that show how users are interacting in your Android app, and to understand the value of your implementation. You can also enable other useful features. The maintenance-free post-interaction email (PIE) feature is key to increasing the volume of your consumer-generated content. In addition, you can run A/B tests to evaluate best practices in your iOS app, live, before you implement them for all customers. You must install the BV Pixel before you can use these indispensable features.</p>
 
-<p class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Before you begin implementation of ths module make sure you have verified your installed as details in the <a href="./installation.html">Installation and Configuration page.</a></p>
+<p class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.</p>
+
 
 
 <h3>Configuration</h3>
@@ -264,7 +263,8 @@ BVSDKManager.sharedManager().staging = true // Set to false for production!
 <br>
 <br>
 
-<h3>Using BV Pixel to track transaction conversions</h3>
+<h3>Tracking transaction conversions</h3>
+<p>Implement the following code to use the BV Pixel to track transaction conversions.</p>
 <ul class="nav nav-tabs" role="tablist">
   <li role="presentation" class="active"><a href="#swift" aria-controls="swift" role="tab" data-toggle="tab">Swift</a></li>
   <li role="presentation"><a href="#objc" aria-controls="objc" role="tab" data-toggle="tab">Objective-C</a></li>
@@ -275,7 +275,7 @@ BVSDKManager.sharedManager().staging = true // Set to false for production!
 	<div role="tabpanel" class="tab-pane active" id="swift">
 <pre><code class="swift">/*
   Construct an array of BVTransactionItem based on the transaction. 
-  Sku is required but the more parameters provided the better
+  Sku is required but the more parameters provided the better.
 */
 
 let firstItem = BVTransactionItem(sku:"123", 
@@ -295,9 +295,9 @@ let transactionItems = [firstItem, secondItem]
 
 /*
   Construct a BVTransaction 
-  OrderId, orderTotal, and orderItems are required
-  You may include any other key value params you'd like
-  BVTransaction also has convenience setters for commonly used params
+  OrderId, orderTotal, and orderItems are required.
+  You may include any other key value params you'd like.
+  BVTransaction also has convenience setters for commonly used params.
 */
 
 let transaction = BVTransaction(orderId:"order id", 
@@ -309,7 +309,7 @@ transaction.shipping = 4.99
 transaction.tax = 2.14
 
 /*
-  Use the BVPixel to track the Conversion Transaction Event
+  Use the BVPixel to track the Conversion Transaction Event.
 */
 
 BVPixel.trackConversionTransaction(transaction)
@@ -319,7 +319,7 @@ BVPixel.trackConversionTransaction(transaction)
 	<div role="tabpanel" class="tab-pane" id="objc">
 <pre><code class="objectivec">/*
 Construct an array of BVTransactionItem based on the transaction. 
-Sku is required but the more parameters provided the better
+Sku is required but the more parameters provided the better.
 */
 
 BVTransactionItem *firstItem = [[BVTransactionItem alloc]init:@"123"
@@ -339,9 +339,9 @@ NSArray *transactionItems = @[firstItem, secondItem];
 
 /*
 Construct a BVTransaction 
-OrderId, orderTotal, and orderItems are required
-You may include any other key value params you'd like
-BVTransaction also has convenience setters for commonly used params
+OrderId, orderTotal, and orderItems are required.
+You may include any other key value params you'd like.
+BVTransaction also has convenience setters for commonly used params.
 */
 
 BVTransaction *transaction = [[BVTransaction alloc]init:@"order id"
@@ -353,7 +353,7 @@ transaction.shipping = 4.99;
 transaction.tax = 2.14;
 
 /*
-Use the BVPixel to track the Conversion Transaction Event
+Use the BVPixel to track the Conversion Transaction Event.
 */
 
 [BVPixel trackConversionTransaction:transaction];
@@ -363,7 +363,8 @@ Use the BVPixel to track the Conversion Transaction Event
 <br>
 <br>
 
-<h3>Using BV Pixel to track generic non-commerce conversions</h3>
+<h3>Tracking generic non-commerce conversions</h3>
+<p>Implement the following code to use the BV Pixel to track generic non-commerce conversions.</p>
 <ul class="nav nav-tabs" role="tablist">
 	<li role="presentation" class="active"><a href="#swift" aria-controls="swift" role="tab" data-toggle="tab">Swift</a></li>
 	<li role="presentation"><a href="#objc" aria-controls="objc" role="tab" data-toggle="tab">Objective-C</a></li>
@@ -374,8 +375,8 @@ Use the BVPixel to track the Conversion Transaction Event
 	<div role="tabpanel" class="tab-pane active" id="swift">
 <pre><code class="swift">/*
 Construct a BVConversion 
-Type and value are required. Label is recommended 
-You may include any other key value params you'd like
+Type and value are required. Label is recommended. 
+Include any other key value params you want.
 */
 
 let conversion = BVConversion("BrochureDownload", 
@@ -384,7 +385,7 @@ label: "Model xyz brochure",
 otherParams: ["state":"TX","email":"some.one@domain.com"])
 
 /*
-Use the BVPixel to track the Non-commerce Conversion Event
+Use the BVPixel to track the Non-commerce Conversion Event.
 */
 
 BVPixel.trackNonCommerceConversion(conversion)
@@ -394,8 +395,8 @@ BVPixel.trackNonCommerceConversion(conversion)
 	<div role="tabpanel" class="tab-pane" id="objc">
 <pre><code class="objectivec">/*
 Construct a BVConversion 
-Type and value are required. Label is recommended 
-You may include any other key value params you'd like
+Type and value are required. Label is recommended.
+Include any other key value params you want.
 */
 
 BVConversion *conversion = [[BVConversion alloc]init:@"BroucherDownload"
@@ -404,7 +405,7 @@ BVConversion *conversion = [[BVConversion alloc]init:@"BroucherDownload"
          otherParams:@{@"state":@"TX", @"email":@"some.one@domain.com"}];
 
 /*
-Use the BVPixel to track the Non-commerce Conversion Event
+Use the BVPixel to track the Non-commerce Conversion Event.
 */
 
 [BVPixel trackNonCommerceConversion:conversion];
@@ -416,9 +417,9 @@ Use the BVPixel to track the Non-commerce Conversion Event
 
 <div class="well well-sm">
 	<h5>Author</h5>
-	<p>Copyright 2016 Bazaarvoice, Inc. All right reserved.</p>
+	<p>Copyright 2016 Bazaarvoice, Inc. All rights reserved.</p>
 	<h5>License</h5>
-	<p>Use of this SDK is contingent on your agreement and conformance with <a href="http://www.bazaarvoice.com/legal/api-terms-of-use.html">Bazaarvoice's API Terms of Use</a>. Additionally, you agree to store all data acquired by this SDK or Bazaarvoice’s API only within the storage of the individual application instance using the SDK or API. You also agree to use the data acquired by the SDK or API only within the context of the same individual application instance and only for purposes consistent with that application’s purpose. Except as otherwise noted, the Bazaarvoice iOS SDK licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>.</p>
+	<p>Use of the Bazaarvoice Mobile SDKs is contingent on your agreement and conformance with <a href="http://www.bazaarvoice.com/legal/api-terms-of-use.html">Bazaarvoice's API Terms of Use</a>. Additionally, you agree to store all data acquired by the SDK or Bazaarvoice's API only within the storage of the individual application instance using the SDK or API. You also agree to use the data acquired by the SDK or API only within the context of the same individual application instance and only for purposes consistent with that application's purpose. Except as otherwise noted, the Bazaarvoice iOS SDK is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>.</p>
 </div>
 <br>
 
