--- a/example_projects.html
+++ b/example_projects.html
@@ -185,7 +185,7 @@ $(function(){
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="faq_support.html">
-                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ & Support</span>
+                    <span><i class="m-r-1 fa fa-question-circle"></i>FAQ and Support</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -227,16 +227,17 @@ $(function(){
 </ul>
 <br>
 
-<h3>Running the basic examples</h3>
+<h3>Running examples</h3>
 <p>The example project require the use of <a href="https://guides.cocoapods.org/using/getting-started.html">Cocoapods</a> to set up the XCode workspace before you can run any of the samples.</p>
 <ol>
 	<li>From a terminal, navigate to an SDK module under the <code>Examples/*</code> directory. Navigate to either the <code>Swift</code> or <code>Obj-C</code> folder.</li>
 	<li>Run <code>pod install</code> and then open the corresponding <code>.xcworkspace</code> file with Xcode.</li>
 	<li>Open the <code>AppDelegate</code> file, and set your API keys and clientId in the <code>didFinishLaunchingWithOptions:</code> method.</li>
 	<li>
-		<p>Select the build target from the project's menu bar:</p>
+		<p>Select the build target from the project's menu bar, as shown in the following screenshot:</p>
 		<img src="ios-img/project_target_selector.png" style="height:200px;" class="center-block" />
 	</li>
+
 	<li>Run it!</li>
 </ol>
 
@@ -261,11 +262,12 @@ The demonstration shows the major components of the SDK from Product Recommendat
 
 
 
+
 <div class="well well-sm">
 	<h5>Author</h5>
-	<p>Copyright 2016 Bazaarvoice, Inc. All right reserved.</p>
+	<p>Copyright 2016 Bazaarvoice, Inc. All rights reserved.</p>
 	<h5>License</h5>
-	<p>Use of this SDK is contingent on your agreement and conformance with <a href="http://www.bazaarvoice.com/legal/api-terms-of-use.html">Bazaarvoice's API Terms of Use</a>. Additionally, you agree to store all data acquired by this SDK or Bazaarvoice’s API only within the storage of the individual application instance using the SDK or API. You also agree to use the data acquired by the SDK or API only within the context of the same individual application instance and only for purposes consistent with that application’s purpose. Except as otherwise noted, the Bazaarvoice iOS SDK licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>.</p>
+	<p>Use of the Bazaarvoice Mobile SDKs is contingent on your agreement and conformance with <a href="http://www.bazaarvoice.com/legal/api-terms-of-use.html">Bazaarvoice's API Terms of Use</a>. Additionally, you agree to store all data acquired by the SDK or Bazaarvoice's API only within the storage of the individual application instance using the SDK or API. You also agree to use the data acquired by the SDK or API only within the context of the same individual application instance and only for purposes consistent with that application's purpose. Except as otherwise noted, the Bazaarvoice iOS SDK is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License, Version 2.0</a>.</p>
 </div>
 <br>
 
